# computational-physics

./: .gitignore
build-first_file-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  first_file
first_file/: main.cpp.autosave
project1/build-project_1-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  forw_back.txt  plot_exact.py  project_1  project_1.cbp
project1/project_1/: .gitignore  CMakeLists.txt  main.cpp
project2/project2/: CMakeLists.txt  main.cpp
warmup/: a.out  warmup.cpp
